# ncnn_MakeupTransfer

./: README.md
android/: README.md
android/app/: build.gradle
android/app/src/main/java/com/tencent/makeup/: MainActivity.java  Makeup.java
android/app/src/main/jni/: CMakeLists.txt  makeup_jni.cpp  parsing.cpp  transfer.cpp  transfer.h
android/app/src/main/res/layout/: main.xml
android/app/src/main/res/values/: strings.xml
linux/: CMakeLists.txt  ssat.cpp
linux/models/: face_parsing.param  makeup.param
